<?xml version="1.0"?>
<package format="2">
  <name>vision_lyapunov_avoidance</name>
  <version>0.0.1</version>
  <description>Vision-based UAV obstacle avoidance with Lyapunov-stable control (PX4 + MAVROS + Gazebo)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core runtime -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>mavros_msgs</depend>
  <depend>mavros</depend>
  <depend>visualization_msgs</depend>
  <depend>image_geometry</depend>

  <export/>
</package>
